(fix): footer elements should wrap

--- a/src/app/modules/pro/channel/footer/footer.component.scss
+++ b/src/app/modules/pro/channel/footer/footer.component.scss
@@ -2,9 +2,11 @@ m-pro--channel-footer {
   display: flex;
   align-items: center;
   justify-content: space-around;
+  flex-wrap: wrap;
   height: 100px;
 
   a {
     text-decoration: none;
+    padding: 0 16px;
   }
 }
